2004-11-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tcl.m4, unix/configure.in: Expanded all AC_DEFINE calls to
	the three-argument form and ported recent changes to the tcl.m4
	from the Tcl distribution. *No* call to AC_CONFIG_HEADERS has been
	added; this change should be virtually entirely cosmetic.

2004-11-12  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXXStubs.c: implemented XGetGeometry().

2004-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCmds.c (Tk_TkObjCmd): use correct screen data when
	-displayof arg is passed to [tk scaling]. [Bug 800178]

2004-11-12  Daniel Steffen  <das@users.sourceforge.net>

	* doc/SetOptions.3:
	* doc/text.n: fixed *roff errors uncovered by running 'make html'.

	* macosx/tkMacOSXFont.c (Tk_MeasureChars,Tk_DrawChars,etc): Make
	sure that the lastSubFontPtr remains valid even when the subfont
	array is reallocated. [Bug 618872]

2004-11-11  Reinhard Max  <max@suse.de>

	* generic/tkEvent.c (InvokeInputMethods): Call XSetICFocus
	whenever the window receives focus. This fixes bug #905830 but
	avoids #1000051.

2004-11-11  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkMain.c:
	* macosx/tkMacOSXAppInit.c (removed):
	* macosx/Wish.pbproj/project.pbxproj: 
	* macosx/tkMacOSXInit.c:
	* macosx/tkMacOSXInt.h: changes to make TkAqua dynamically loadable,
	enabling [package require Tk] from tclsh. Startup code from
	tkMacOSXAppInit.c moved into tkMacOSXInit.c, added code that
	notifies the window server that an unbundled executable is a full
	GUI application after loading Tk. [Patch 1035348]

	* doc/wm.n: documented [wm attributes] on Mac OS X. [Bug 606665]
	* macosx/tkMacOSXWm.c: implemented TIP 222 [wm attributes -alpha] on
	Mac OS X. [Patch 892194]
	WmIconbitmapCmd: adopted FSRef changes from [wm atttrs -titlepath].

	* macosx/tkMacOSXSubwindows.c: synced spacing/formatting with
	core-8-4-branch.

	* generic/tkRectOval.c:
	* macosx/README:
	* macosx/tkMacOSXDefault.h: